--- a/qualifications.html
+++ b/qualifications.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>DOMAIN</title>
-    <link type="text/css" rel="stylesheet" href="index.css">
+    <link type="text/css" rel="stylesheet" href="qualifications.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -34,13 +34,24 @@
         <img id="headshot" src="images/gill.jpeg">
       </div>
       <div id="info" class="col-md-7">
-        <h3><b>About Me</b></h3>
-        <p>I am a fully qualified integrative counsellor/psychotherapist in South Manchester, who draws upon a blending of various therapies and who offers non-judgemental empathic counselling in a safe confidential environment with the aim of helping individuals develop their own resources in order to cope.</p>
-        <p>There are many reasons that people seek help through counselling. It may be that life is particularly challenging at the moment and that you are finding it difficult to cope with every day tasks or that
-           you do not seem to be able to gather the motivation to go about your daily life. There may also be significant life events either recent or in the past that just keep resurfacing.</p>
-         <p> I have worked for many years in an educational environment with both disaffected young people and adults, and offer long or short term therapy. More recently I have worked with carers and am currently undertaking a PhD into the experiences of those caring for a relative with dementia.</p>
-       <p> I am an integrative counsellor which means I can use various approaches with a person centred base. I offer safe confidential empathic counselling in South Manchester, and offer clients space to explore their feelings in a supportive environment.</p>
-        <p>I have also trained for many years in Tai Chi (am an indoor student) Bagua and Chi Gong which enables me to help clients relax and become mindful of the feelings.</p>
+        <h3><b>Qualifications</b></h3>
+        <ol>
+          <li><b>BSc</b> in <b>Psychology</b> <i>(Manchester Metropolitan University)</i></li>
+          <li><b>MSc</b> in <b>Psychology</b> <i>(Manchester Metropolitan University</i></li>
+          <li><b>Post Graduate certificate</b> in <b>Counselling</b> <i>(University of Manchester)</i></li>
+          <li><b>MA</b> in <b>Counselling</b> <i>(University of Manchester)</i></li>
+          <li>I am currently undertaking a <b>PhD</b> at <i>Manchester University</i></li>
+        </ol>
+        <h3><b>Training and Experience</b></h3>
+        <ol>
+          <li><b>Learning Mentor Certificate</b> <i>(City and Guilds London Inst.)</i> Recognised by Excellence in Cities for my achievements in school by winning an award in 2001</li>
+          <li>ITA <b>Transactional Analysis</b> Cert. <i>(Inst. Of TA)</i></li>
+          <li><b>Safeguarding Children</b> Cert. <i>(Manchester City Council)</i></li>
+          <li><b>Special Educational Needs</b> Cert. <i>(Manchester Metropolitan University)</i></li>
+          <li>Counselling <b>Young People</b> Certificate <i>(Trafford Council)</i></li>
+          <li>Counselling Cert. Lev 1 <i>(Manchester Metropolitan University)</i></li>
+          <li>Counselling  Skills Cert. Lev 2 <i>( University of Manchester)</i></li>
+        </ol>
       </div>
       <div class="col-md-1"><!--spacer--></div>
     </div>
