--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Me</title>
+    <title>Contact</title>
     <link type="text/css" rel="stylesheet" href="index.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,19 +30,37 @@
       </nav>
     </div>
     <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-3">
+        <h3><b>Locations</b></h3>
+        <p>Health & Wellbeing Centre
+        </br>Above Re Love & Care Charity Shop
+        </br>2A Curzon Road
+        </br>Sale
+        </br>Manchester
+        </br>M33 7DR</p>
+        <iframe style="height: 300px; width: 300px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1128.0966938531012!2d-2.3239490932053153!3d53.4255534299957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bac4f1ae71ec5%3A0x87934246d9620c1d!2sCurzon+Rd%2C+Sale+M33+7DR!5e0!3m2!1sen!2suk!4v1524518713390" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-3">
+        <h3><b>Locations</b></h3>
+        <p>Cheadle Hulme Centre for </br>Psychotherapy and Counselling
+        </br>16b Station Road
+        </br>Cheadle Hulme
+        </br>Cheshire
+        </br>SK8 5AE</p>
+        <iframe style="height: 300px; width: 300px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380.1152311133924!2d-2.192372934433864!3d53.376987679985476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb331e7adfa5f%3A0x3de2ad40ac8e3505!2sStation+Rd%2C+Cheadle+Hulme%2C+Cheadle+SK8+5AE!5e0!3m2!1sen!2suk!4v1524518920481" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
       <div class="col-md-4">
-        <img id="headshot" src="images/gill.jpeg">
+        <h3><b>Contact</b></h3>
+        <p><b>Email:</b> gillegeli@mail.com</p>
+        <p><b>Tel:</b> 07739 902 343</p>
+        <h3><b>Further Info</b></h3>
+        <p>I am based in Cheadle Hulme Cheshire, and in Sale Manchester .All sessions and correspondence are confidential in accordance with the BACP and BPS code of ethics.</p>
+        <p>For further information, please contact me via email or telephone using the details above</p>
       </div>
-      <div id="info" class="col-md-7">
-        <h3><b>About Me</b></h3>
-        <p>I am a fully qualified integrative counsellor/psychotherapist in South Manchester, who draws upon a blending of various therapies and who offers non-judgemental empathic counselling in a safe confidential environment with the aim of helping individuals develop their own resources in order to cope.</p>
-        <p>There are many reasons that people seek help through counselling. It may be that life is particularly challenging at the moment and that you are finding it difficult to cope with every day tasks or that
-           you do not seem to be able to gather the motivation to go about your daily life. There may also be significant life events either recent or in the past that just keep resurfacing.</p>
-         <p> I have worked for many years in an educational environment with both disaffected young people and adults, and offer long or short term therapy. More recently I have worked with carers and am currently undertaking a PhD into the experiences of those caring for a relative with dementia.</p>
-       <p> I am an integrative counsellor which means I can use various approaches with a person centred base. I offer safe confidential empathic counselling in South Manchester, and offer clients space to explore their feelings in a supportive environment.</p>
-        <p>I have also trained for many years in Tai Chi (am an indoor student) Bagua and Chi Gong which enables me to help clients relax and become mindful of the feelings.</p>
-      </div>
-      <div class="col-md-1"><!--spacer--></div>
+      <div class="col-md1"></div>
+    </div>
+    <div style="height: 30px; class="row">
     </div>
     <div class="row">
       <footer>
