--- a/qualifications.html
+++ b/qualifications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DOMAIN</title>
+    <title>Qualitfications</title>
     <link type="text/css" rel="stylesheet" href="qualifications.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,7 +31,8 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <img id="headshot" src="images/gill.jpeg">
+        <img id="quals" src="images/uom.jpeg">
+        <img id="quals" src="images/mmu.jpeg">
       </div>
       <div id="info" class="col-md-7">
         <h3><b>Qualifications</b></h3>
@@ -58,13 +59,13 @@
     <div class="row">
       <footer>
         <div class="col-md-8">
-          <img class="footlogo" src="images/bacp.png">
-          <img class="footlogo" src="images/accredited.png">
-          <img class="footlogo" src="images/bps.png">
-          <img class="footlogo" src="images/cd.png">
+          <a href="https://www.bacp.co.uk/search/Register"><img class="footlogo" src="images/bacp.png"></a>
+          <a href="https://www.bacp.co.uk/about-us/protecting-the-public/bacp-register/"><img class="footlogo" src="images/accredited.png"></a>
+          <a href="https://www.bps.org.uk/"><img class="footlogo" src="images/bps.png"></a>
+          <a href="https://www.counselling-directory.org.uk/counsellors/gillian-egeli"><img class="footlogo" src="images/cd.png"></a>
         </div>
         <div class="col-md-4">
-          <p id="foottext">https://manchestercounsellorgill.com</br> e: gillegeli@mail.com t: 07739 902 343</p>
+          <p class= "foottext">https://manchestercounsellorgill.com</br><b>e:</b> gillegeli@mail.com <b>t:</b> 07739 902 343</p>
         </div>
       </footer>
     </div>
