--- a/qualifications.html
+++ b/qualifications.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-md-2">
         <button id="mediafb"><a href="https://www.facebook.com" class="fa fa-facebook" target="_blank"></a></button>
-        <button id="mediali"><a href="https://www.linkedin.com" class="fa fa-linkedin" target="_blank"></a></button>
+        <button id="mediali"><a href="https://www.linkedin.com/in/gillian-egeli-b41a1342/" class="fa fa-linkedin" target="_blank"></a></button>
       </div>
     </div>
     <div class="row">
