--- a/qualifications.html
+++ b/qualifications.html
@@ -41,7 +41,7 @@
           <li><b>MSc</b> in <b>Psychology</b> <i>(Manchester Metropolitan University</i></li>
           <li><b>Post Graduate certificate</b> in <b>Counselling</b> <i>(University of Manchester)</i></li>
           <li><b>MA</b> in <b>Counselling</b> <i>(University of Manchester)</i></li>
-          <li>I am currently undertaking a <b>PhD</b> at <i>Manchester University</i></li>
+          <li>I am currently undertaking a <b>PhD</b> at <i> the University of Manchester</i></li>
         </ol>
         <h3><b>Training and Experience</b></h3>
         <ol>
